--- a/README.adoc
+++ b/README.adoc
@@ -1,23 +1,27 @@
-[![Open in Visual Studio Code](https://classroom.github.com/assets/open-in-vscode-718a45dd9cf7e7f842a935f5ebbe5719a5e09af4491e668f4dbf3b35d5cca122.svg)](https://classroom.github.com/online_ide?assignment_repo_id=13208153&assignment_repo_type=AssignmentRepo)
 = R5.A.08 -- Dépôt pour les TPs
-:icons: font
-:MoSCoW: https://fr.wikipedia.org/wiki/M%C3%A9thode_MoSCoW[MoSCoW]
 
-Ce dépôt concerne les rendus de mailto:A_changer@etu.univ-tlse2.fr[Jonh Doe].
+Ce dépôt concerne les rendus de mailto:enzo.brouxel@etu.univ-tlse2.fr[Enzo BROUXEL]. +
+https://classroom.github.com/online_ide?assignment_repo_id=13208153&assignment_repo_type=AssignmentRepo[Open in Visual Studio Code]
 
 == TP1
 
-.Exemple de code
-[source,java]
+.is_it_friday_yet.feature
+[source,gherkin]
 ---
-@Given("today is Sunday")
-public void today_is_sunday() {
-    // Write code here that turns the phrase above into concrete actions
-    throw new io.cucumber.java.PendingException();
-}
+# Created by enzob at 11/12/2023
+# language: en
+Feature: Is it Friday yet?
+  # Enter feature description here
+  Scenario Outline: Friday is Friday
+    Given today is "<day>"
+    When I ask whether it's Friday yet
+    Then I should be told "<answer>"
+    Examples:
+      | day            | answer |
+      | Friday         | TGIF   |
+      | Sunday         | Nope   |
+      | anything else! | Nope   |
 ---
 
-.Exemple d'image insérée en asciidoc
-image::artifacts-r303.svg[width=80%]
-
-== TP2...
+.Exécution des tests du TP1
+image::images/tp1_tests_results.png[]
